shlink/03-deploy-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: shlink-db
  name: db
  namespace: shlink
spec:
  serviceName: shlink-db
  replicas: 1
  selector:
    matchLabels:
      service: shlink-db
  template:
    metadata:
      labels:
        service: shlink-db
    spec:
      containers:
        - image: postgres:17
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: shlink-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: shlink-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: shlink
  labels:
    service: shlink-db
spec:
  clusterIP: None
  selector:
    service: shlink-db
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
