shlink/04-deploy-shlink.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: shlink-shlink
  name: shlink
  namespace: shlink
spec:
  replicas: 1
  selector:
    matchLabels:
      service: shlink-shlink
  template:
    metadata:
      labels:
        service: shlink-shlink
    spec:
      containers:
        - name: shlink
          image: shlinkio/shlink:stable
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shlink
  namespace: shlink
  labels:
    service: shlink-shlink
spec:
  type: ClusterIP
  ports:
    - name: shlink
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    service: shlink-shlink
