shlink/06-ingress-shlink.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shlink
  namespace: shlink
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    # Uncomment next if you use https://cert-manager.io/
    # cert-manager.io/cluster-issuer: "<YOUR CLUSTER ISSUER>"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shlink.example.com
  rules:
    - host: shlink.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink
                port:
                  number: 8080
